// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// 用來測試傳輸的JSON
// The Comment message represents each individual JSON object.
message Comment {
  int32 postId = 1;
  int32 id = 2;
  string name = 3;
  string email = 4;
  string body = 5;
}

// The CommentList message is used to hold an array of Comment messages
// mimicking an array of JSON objects.
message CommentList {
  repeated Comment comments = 1;
}

// Define the service
service CommentService {
  rpc GetAllComments(EmptyRequest) returns (CommentList);
}

message EmptyRequest {
  // Empty message as no specific request parameters are needed to fetch all comments
}

message CommentRequest {
  //  fetch comments related to a specific postId
  int32 postId = 1;
}

//  re-compile: protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/demo-data.proto
